static/psi4manual/1.3.2/_sources/autodir_psivariables/module__dfocc.rst.txt
.. _`apdx:dfocc_psivar`:


DFOCC
=====

Performs density-fitted orbital-optimized MPn and CC computations and conventional MPn computations.

.. hlist::
   :columns: 1

   * :psivar:`(AT) CORRECTION ENERGY <(AT)CORRECTIONENERGY>`

   * :psivar:`(T) CORRECTION ENERGY <(T)CORRECTIONENERGY>`

   * :psivar:`CCD CORRELATION ENERGY <CCDCORRELATIONENERGY>`

   * :psivar:`CCD TOTAL ENERGY <CCDTOTALENERGY>`

   * :psivar:`CCSD CORRELATION ENERGY <CCSDCORRELATIONENERGY>`

   * :psivar:`CCSD TOTAL ENERGY <CCSDTOTALENERGY>`

   * :psivar:`CCSD(AT) TOTAL ENERGY <CCSD(AT)TOTALENERGY>`

   * :psivar:`CCSD(T) CORRELATION ENERGY <CCSD(T)CORRELATIONENERGY>`

   * :psivar:`CCSD(T) TOTAL ENERGY <CCSD(T)TOTALENERGY>`

   * :psivar:`CURRENT CORRELATION ENERGY <CURRENTCORRELATIONENERGY>`

   * :psivar:`CURRENT ENERGY <CURRENTENERGY>`

   * :psivar:`CURRENT REFERENCE ENERGY <CURRENTREFERENCEENERGY>`

   * :psivar:`LCCD CORRELATION ENERGY <LCCDCORRELATIONENERGY>`

   * :psivar:`LCCD TOTAL ENERGY <LCCDTOTALENERGY>`

   * :psivar:`MP2 CORRELATION ENERGY <MP2CORRELATIONENERGY>`

   * :psivar:`MP2 OPPOSITE-SPIN CORRELATION ENERGY <MP2OPPOSITE-SPINCORRELATIONENERGY>`

   * :psivar:`MP2 SAME-SPIN CORRELATION ENERGY <MP2SAME-SPINCORRELATIONENERGY>`

   * :psivar:`MP2 TOTAL ENERGY <MP2TOTALENERGY>`

   * :psivar:`MP2.5 CORRELATION ENERGY <MP2.5CORRELATIONENERGY>`

   * :psivar:`MP2.5 TOTAL ENERGY <MP2.5TOTALENERGY>`

   * :psivar:`MP3 CORRELATION ENERGY <MP3CORRELATIONENERGY>`

   * :psivar:`MP3 TOTAL ENERGY <MP3TOTALENERGY>`

   * :psivar:`NAUX (SCF) <NAUX(SCF)>`

   * :psivar:`OLCCD CORRELATION ENERGY <OLCCDCORRELATIONENERGY>`

   * :psivar:`OLCCD TOTAL ENERGY <OLCCDTOTALENERGY>`

   * :psivar:`OMP2 CORRELATION ENERGY <OMP2CORRELATIONENERGY>`

   * :psivar:`OMP2 TOTAL ENERGY <OMP2TOTALENERGY>`

   * :psivar:`OMP2.5 CORRELATION ENERGY <OMP2.5CORRELATIONENERGY>`

   * :psivar:`OMP2.5 TOTAL ENERGY <OMP2.5TOTALENERGY>`

   * :psivar:`OMP3 CORRELATION ENERGY <OMP3CORRELATIONENERGY>`

   * :psivar:`OMP3 TOTAL ENERGY <OMP3TOTALENERGY>`

   * :psivar:`SCS-MP2 CORRELATION ENERGY <SCS-MP2CORRELATIONENERGY>`

   * :psivar:`SCS-MP2 TOTAL ENERGY <SCS-MP2TOTALENERGY>`

   * :psivar:`SCS-OMP2 CORRELATION ENERGY <SCS-OMP2CORRELATIONENERGY>`

   * :psivar:`SCS-OMP2 TOTAL ENERGY <SCS-OMP2TOTALENERGY>`

   * :psivar:`SCSN-MP2 CORRELATION ENERGY <SCSN-MP2CORRELATIONENERGY>`

   * :psivar:`SCSN-MP2 TOTAL ENERGY <SCSN-MP2TOTALENERGY>`

   * :psivar:`SCSN-OMP2 CORRELATION ENERGY <SCSN-OMP2CORRELATIONENERGY>`

   * :psivar:`SCSN-OMP2 TOTAL ENERGY <SCSN-OMP2TOTALENERGY>`

   * :psivar:`SOS-MP2 CORRELATION ENERGY <SOS-MP2CORRELATIONENERGY>`

   * :psivar:`SOS-MP2 TOTAL ENERGY <SOS-MP2TOTALENERGY>`

   * :psivar:`SOS-OMP2 CORRELATION ENERGY <SOS-OMP2CORRELATIONENERGY>`

   * :psivar:`SOS-OMP2 TOTAL ENERGY <SOS-OMP2TOTALENERGY>`


