static/psi4manual/1.5.0/_sources/autodir_psivariables/module__dfocc.rst.txt
.. _`apdx:dfocc_psivar`:


DFOCC
=====

Performs density-fitted orbital-optimized MPn and CC computations and conventional MPn computations.

.. hlist::
   :columns: 1

   * :psivar:`(AT) CORRECTION ENERGY`

   * :psivar:`(T) CORRECTION ENERGY`

   * :psivar:`CCD CORRELATION ENERGY`

   * :psivar:`CCD TOTAL ENERGY`

   * :psivar:`CCSD CORRELATION ENERGY`

   * :psivar:`CCSD DOUBLES ENERGY`

   * :psivar:`CCSD SINGLES ENERGY`

   * :psivar:`CCSD TOTAL ENERGY`

   * :psivar:`CCSD(AT) TOTAL ENERGY`

   * :psivar:`CCSD(T) CORRELATION ENERGY`

   * :psivar:`CCSD(T) TOTAL ENERGY`

   * :psivar:`CURRENT CORRELATION ENERGY`

   * :psivar:`CURRENT ENERGY`

   * :psivar:`CURRENT REFERENCE ENERGY`

   * :psivar:`LCCD CORRELATION ENERGY`

   * :psivar:`LCCD DOUBLES ENERGY`

   * :psivar:`LCCD OPPOSITE-SPIN CORRELATION ENERGY`

   * :psivar:`LCCD SAME-SPIN CORRELATION ENERGY`

   * :psivar:`LCCD SINGLES ENERGY`

   * :psivar:`LCCD TOTAL ENERGY`

   * :psivar:`MP2 CORRELATION ENERGY`

   * :psivar:`MP2 DOUBLES ENERGY`

   * :psivar:`MP2 OPPOSITE-SPIN CORRELATION ENERGY`

   * :psivar:`MP2 SAME-SPIN CORRELATION ENERGY`

   * :psivar:`MP2 SINGLES ENERGY`

   * :psivar:`MP2 TOTAL ENERGY`

   * :psivar:`MP2.5 CORRELATION ENERGY`

   * :psivar:`MP2.5 DOUBLES ENERGY`

   * :psivar:`MP2.5 OPPOSITE-SPIN CORRELATION ENERGY`

   * :psivar:`MP2.5 SAME-SPIN CORRELATION ENERGY`

   * :psivar:`MP2.5 SINGLES ENERGY`

   * :psivar:`MP2.5 TOTAL ENERGY`

   * :psivar:`MP3 CORRELATION ENERGY`

   * :psivar:`MP3 DOUBLES ENERGY`

   * :psivar:`MP3 OPPOSITE-SPIN CORRELATION ENERGY`

   * :psivar:`MP3 SAME-SPIN CORRELATION ENERGY`

   * :psivar:`MP3 SINGLES ENERGY`

   * :psivar:`MP3 TOTAL ENERGY`

   * :psivar:`NAUX (SCF)`

   * :psivar:`OLCCD CORRELATION ENERGY`

   * :psivar:`OLCCD TOTAL ENERGY`

   * :psivar:`OMP2 CORRELATION ENERGY`

   * :psivar:`OMP2 TOTAL ENERGY`

   * :psivar:`OMP2.5 CORRELATION ENERGY`

   * :psivar:`OMP2.5 TOTAL ENERGY`

   * :psivar:`OMP3 CORRELATION ENERGY`

   * :psivar:`OMP3 TOTAL ENERGY`

   * :psivar:`SCS(N)-MP2 CORRELATION ENERGY`

   * :psivar:`SCS(N)-MP2 TOTAL ENERGY`

   * :psivar:`SCS(N)-OMP2 CORRELATION ENERGY`

   * :psivar:`SCS(N)-OMP2 TOTAL ENERGY`

   * :psivar:`SCS-MP2 CORRELATION ENERGY`

   * :psivar:`SCS-MP2 TOTAL ENERGY`

   * :psivar:`SCS-OMP2 CORRELATION ENERGY`

   * :psivar:`SCS-OMP2 TOTAL ENERGY`

   * :psivar:`SCSN-OMP2 CORRELATION ENERGY`

   * :psivar:`SCSN-OMP2 TOTAL ENERGY`

   * :psivar:`SOS-MP2 CORRELATION ENERGY`

   * :psivar:`SOS-MP2 TOTAL ENERGY`

   * :psivar:`SOS-OMP2 CORRELATION ENERGY`

   * :psivar:`SOS-OMP2 TOTAL ENERGY`


